# EasierLightNovel

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/app/: config.py  database.py  enums.py  models.py  schemas.py
backend/app/routers/: __init__.py  ai.py  books.py  config.py  dictionary.py  highlights.py  user_config.py  vocabularies.py
backend/app/services/: book_service.py  dictionary_service.py  highlight_service.py  llm_service.py  mineru_client.py  progress_service.py  user_config_service.py  vocabulary_service.py
backend/app/utils/: async_api_call.py  domain.py  epub_parser.py  tokenizer.py
backend/app/utils/parsers/: epub_parser.py  markdown_parser.py  pdf_parser.py
config/: README.md  schema.json  user.json  user.json.example
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/common/: Toast.tsx
web/src/components/reader/: ContentCanvas.tsx  LeftDock.tsx  MobileGuide.tsx  ReaderSidebar.tsx  SegmentRenderer.tsx  (+5 more)
web/src/hooks/: useLibrary.ts  useScrollProgress.ts
web/src/lib/: api.ts  utils.ts
web/src/pages/: LibraryPage.tsx
web/src/services/: ai.service.ts  api-client.ts  books.service.ts  config.service.ts  dictionary.service.ts  highlights.service.ts  index.ts  userConfig.service.ts  vocabularies.service.ts
web/src/stores/: index.ts  readerStore.ts  settingsStore.ts
web/src/types/: ai.ts  book.ts  chapter.ts  common.ts  dictionary.ts  highlight.ts  index.ts  progress.ts  userConfig.ts  vocabulary.ts
web/src/utils/: highlightStyles.ts  tts.ts
(+5 files in other folders)
