[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.20",
    "fastapi>=0.128.0",
    "jaconv>=0.4.1",
    "jamdict>=0.1a11.post2",
    "python-multipart>=0.0.21",
    "sudachidict-core>=20260116",
    "sudachipy>=0.6.10",
    "uvicorn>=0.40.0",
]
