[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi>=0.128.0",
    "jaconv>=0.4.1",
    "jamdict>=0.1a11.post2",
    "litellm>=1.81.3",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.46",
    "sudachidict-core>=20260116",
    "sudachipy>=0.6.10",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "auto"
